projects/vb6parse/snapshots/parsers/cst/assignment/assignment_preserves_whitespace.snap
---
source: projects/vb6parse/src/parsers/cst/assignment.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: "   "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: "   "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "5"
